--- a/app/templates/app/inpatient_care.html
+++ b/app/templates/app/inpatient_care.html
@@ -9,6 +9,7 @@
                 <th>Tên</th>
                 <th>Loài</th>
                 <th>Tiến trình</th>
+                <th>Hành động</th>
             </tr>
         </thead>
         <tbody>
@@ -17,12 +18,13 @@
                     <td>{{ pet.name }}</td>
                     <td>{{ pet.species }}</td>
                     <td>{{ pet.progress }}</td>
+                    <td>
+                        <a href="{% url 'edit_medical' pet.pk %}" class="btn btn-warning btn-sm">Sửa</a>
+                        <a href="{% url 'delete_medical' pet.pk %}" class="btn btn-danger btn-sm" onclick="return confirm('Bạn chắc chắn muốn xóa?')">Xóa</a>
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
-    <div class="text-center mt-4">
-        <img src="/static/app/images/banner/chodai.jpg" class="img-fluid" alt="Inpatient Care">
-    </div>
 </div>
-{% endblock content %}
+{% endblock %}
