--- a/project/CNPM/home/templates/home/home.html
+++ b/project/CNPM/home/templates/home/home.html
@@ -247,7 +247,7 @@
         <div class="container col-10">
           <div class="row">
             <div class="col-md-3">
-              <div class="card">
+              <div class="card border-0">
                 <div class="card-body">
                   <img
                     src="{% static 'home/images/web1.webp'%} "
@@ -268,7 +268,7 @@
               </div>
             </div>
             <div class="col-md-3">
-              <div class="card">
+              <div class="card border-0">
                 <div class="card-body">
                   <img
                     src="{% static 'home/images/hinh13.jpg'%} "
@@ -291,7 +291,7 @@
               </div>
             </div>
             <div class="col-md-3">
-              <div class="card">
+              <div class="card border-0">
                 <div class="card-body">
                   <img
                     src="{% static 'home/images/web3.jpg'%} "
@@ -312,7 +312,7 @@
               </div>
             </div>
             <div class="col-md-3">
-              <div class="card">
+              <div class="card border-0">
                 <div class="card-body">
                   <img
                     src="{% static 'home/images/hinh14.jpg' %} "
@@ -332,37 +332,84 @@
           </div>
         </div>
       </section>
-    </main>
-    <footer class="footer">
-      <div class="container-fluid col-10">
-        <div class="row pt-3 pb-3">
-          <div class="col-md-4 care">
-            <h4>Đánh Giá Của Khách Hàng</h4>
-            <div>
-              <ul>
-                <li><a href="Xem them"> Nhấn Vào Để Xem </a></li>
-              </ul>
+
+      <section>
+        <div class="container mt-3 row d-flex">
+          <div class="col-md-3">
+            <div class="card border-0">
+              <img
+                class="card-img-top"
+                src="hinhanh/thucan5.webp"
+                alt="Card image"
+                style="width: 100%"
+              />
+              <div class="card-body">
+                <h4 class="card-title">John Doe</h4>
+                <p class="card-text">
+                  Some example text some example text. John Doe is an architect
+                  and engineer
+                </p>
+                <a href="#" class="btn btn-primary">See Profile</a>
+              </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <h4 class="care">Pet Care</h4>
-            <ul>
-              <li>Phone: 0889969020</li>
-              <li>Maps: 25 Tô Ký - Tân Chánh Hiệp - Quận 12</li>
-              <li>Social:</li>
-            </ul>
+          <div class="col-md-3">
+            <div class="card border-0">
+              <img
+                class="card-img-top"
+                src="hinhanh/thucan7.webp"
+                alt="Card image"
+                style="width: 100%"
+              />
+              <div class="card-body">
+                <h4 class="card-title">John Doe</h4>
+                <p class="card-text">
+                  Some example text some example text. John Doe is an architect
+                  and engineer
+                </p>
+                <a href="#" class="btn btn-primary">See Profile</a>
+              </div>
+            </div>
           </div>
-          <div class="col-md-4">
-            <ul>
-              <h4 class=" ">Hỗ Trợ Khách Hàng</h4>
-              <li><a href="*"> Chính Sách Mua Hàng </a></li>
-              <li><a href="*"> Điều Khoản Dịch Vụ </a></li>
-              <li><a href="*"> Hình Thức Thanh Toán </a></li>
-            </ul>
+          <div class="col-md-3">
+            <div class="card border-0">
+              <img
+                class="card-img-top"
+                src="hinhanh/thucan8.webp"
+                alt="Card image"
+                style="width: 100%"
+              />
+              <div class="card-body">
+                <h4 class="card-title">John Doe</h4>
+                <p class="card-text">
+                  Some example text some example text. John Doe is an architect
+                  and engineer
+                </p>
+                <a href="#" class="btn btn-primary">See Profile</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card border-0">
+              <img
+                class="card-img-top"
+                src="hinhanh/thucan9.webp"
+                alt="Card image"
+                style="width: 100%"
+              />
+              <div class="card-body">
+                <h4 class="card-title">John Doe</h4>
+                <p class="card-text">
+                  Some example text some example text. John Doe is an architect
+                  and engineer
+                </p>
+                <a href="#" class="btn btn-primary">See Profile</a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </footer>
+      </section>
+    </main>
     <script src="" async defer></script>
   </body>
 </html>
