--- a/project/CNPM/home/static/home/css/home.css
+++ b/project/CNPM/home/static/home/css/home.css
@@ -22,7 +22,7 @@
   padding: 5px 2px;
   }
   .body{
-  font-family:'Courier New', Courier, monospace;
+  font-family: Verdana, sans-serif;
   }
   .bgtop1{
   background-color: rgb(16, 165, 130);
