--- a/webthucung/app/templates/danh_gia_nguoi_dung.html
+++ b/webthucung/app/templates/danh_gia_nguoi_dung.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Pet Health Care System</title>
+    <title>Đánh giá khách hàng</title>
     <!-- CSS -->
      {% load static %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -51,5 +51,9 @@
           </div>
         </div>
       </nav>
+    </head>
+    <body>
+        <h1>Đánh giá khách hàng</h1>
+        <a class="btn btn-outline-success" type="submit" href="{% url 'home' %}">Quay lại Trang Chính</a>
 </body>
-</html>
+</html> 
