--- a/project/CNPM/home/templates/home/home.html
+++ b/project/CNPM/home/templates/home/home.html
@@ -59,7 +59,7 @@
           <div class="container col-10">
             <div class="row pt-2 pb-2">
               <div class="col-md-2">
-                <a href="" target="home">
+                <a href="">
                   <img
                     src="{% static 'home/images/anh001.png'%}"
                     alt=""
