--- a/project/CNPM/home/static/home/css/thucan.css
+++ b/project/CNPM/home/static/home/css/thucan.css
@@ -83,13 +83,15 @@
     font-size: 1.2em;
   }
   .msb {
+
     position: sticky;
     width: 20%;
     overflow-y: auto;
 } 
 .mgl{
   margin-top: 140px;
-  margin-left: 25%;
+  margin-left: 330px;
+  margin-right: 30px;
 }
 .footer{
   clear: both;
@@ -112,7 +114,6 @@
   }
 /**/ 
 .full{
-  background-color: aqua;
   float:left;
   width: 100%;
 }
@@ -120,9 +121,9 @@
   padding-bottom: 30px;
   margin-bottom: 50px;
   min-height: 900px;
-  background-color: #e115a7;
 }
 .news{
   margin-top: 20px;
   min-height: 200px;
+  position: relative;
 }
