--- a/project/CNPM/home/templates/home/thucan.html
+++ b/project/CNPM/home/templates/home/thucan.html
@@ -30,7 +30,7 @@
     <!--<link rel="stylesheet" href="css/bootstrap.min.css">
         <script src="js/bootstrap.bundle.min.js"></script>-->
     {% load static %}
-    <link rel="stylesheet" href="{% static 'home/css/home.css' %}" />
+    <link rel="stylesheet" href="{% static 'home/css/thucan.css' %}" />
     <script
       type="text/javascript"
       src="{% static 'home/js/home.js' %}"
@@ -54,7 +54,7 @@
                 <div class="col-md-2">
                   <a href="#" target="home">
                     <img
-                      src=" {% static 'home/images/anh001.png' %}"
+                      src="{% static 'home/images/anh001.png' %}"
                       alt=""
                       class="w-50 m-0"
                       loading="lazy"
@@ -144,7 +144,26 @@
                     <div class="card border-0">
                       <img
                         class="card-img-top"
-                        src=" {% static 'home/images/thucan6.webp' %}"
+                        src="{% static 'home/images/thucan6.webp' %}"
+                        alt="Card image"
+                        style="width: 100%"
+                      />
+                      <div class="card-body">
+                        <h4 class="card-title">Thức Ăn Chó</h4>
+                        <p class="card-text">Pedigree</p>
+                        <span class="product-price" data-price="100000"
+                          >100,000 VND</span
+                        >
+                        <button class="add-to-cart">Thêm vào giỏ</button>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-3">
+                    <div class="card border-0">
+                      <img
+                        class="card-img-top"
+                        src="{% static 'home/images/thucan2.webp' %}"
                         alt="Card image"
                         style="width: 100%"
                       />
@@ -162,7 +181,7 @@
                     <div class="card border-0">
                       <img
                         class="card-img-top"
-                        src=" {% static 'home/images/thucan2.webp' %}"
+                        src="{% static 'home/images/thucan3.jpg' %}"
                         alt="Card image"
                         style="width: 100%"
                       />
@@ -180,25 +199,7 @@
                     <div class="card border-0">
                       <img
                         class="card-img-top"
-                        src=" {% static 'home/images/thucan3.jpg' %}"
-                        alt="Card image"
-                        style="width: 100%"
-                      />
-                      <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">
-                          Some example text some example text. John Doe is an
-                          architect and engineer
-                        </p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3">
-                    <div class="card border-0">
-                      <img
-                        class="card-img-top"
-                        src=" {% static 'home/images/thucan4.webp' %}"
+                        src="{% static 'home/images/thucan4.webp' %}"
                         alt="Card image"
                         style="width: 100%"
                       />
@@ -222,7 +223,7 @@
                   <div class="card border-0">
                     <img
                       class="card-img-top"
-                      src=" {% static 'home/images/thucan5.webp' %}"
+                      src="{% static 'home/images/thucan5.webp' %}"
                       alt="Card image"
                       style="width: 100%"
                     />
@@ -240,7 +241,7 @@
                   <div class="card border-0">
                     <img
                       class="card-img-top"
-                      src=" {% static 'home/images/thucan7.webp' %}"
+                      src="{% static 'home/images/thucan7.webp' %}"
                       alt="Card image"
                       style="width: 100%"
                     />
@@ -258,7 +259,7 @@
                   <div class="card border-0">
                     <img
                       class="card-img-top"
-                      src=" {% static 'home/images/thucan8.webp' %}"
+                      src="{% static 'home/images/thucan8.webp' %}"
                       alt="Card image"
                       style="width: 100%"
                     />
@@ -276,7 +277,7 @@
                   <div class="card border-0">
                     <img
                       class="card-img-top"
-                      src=" {% static 'home/images/thucan9.webp' %}"
+                      src="{% static 'home/images/thucan9.webp' %}"
                       alt="Card image"
                       style="width: 100%"
                     />
@@ -298,7 +299,7 @@
                   <div class="card border-0">
                     <img
                       class="card-img-top"
-                      src=" {% static 'home/images/thucan5.webp' %}"
+                      src="{% static 'home/images/thucan5.webp' %}"
                       alt="Card image"
                       style="width: 100%"
                     />
@@ -316,7 +317,7 @@
                   <div class="card border-0">
                     <img
                       class="card-img-top"
-                      src=" {% static 'home/images/thucan7.webp' %}"
+                      src="{% static 'home/images/thucan7.webp' %}"
                       alt="Card image"
                       style="width: 100%"
                     />
@@ -334,7 +335,7 @@
                   <div class="card border-0">
                     <img
                       class="card-img-top"
-                      src=" {% static 'home/images/thucan8.webp' %}"
+                      src="{% static 'home/images/thucan8.webp' %}"
                       alt="Card image"
                       style="width: 100%"
                     />
@@ -352,7 +353,7 @@
                   <div class="card border-0">
                     <img
                       class="card-img-top"
-                      src=" {% static 'home/images/thucan9.webp' %}"
+                      src="{% static 'home/images/thucan9.webp' %}"
                       alt="Card image"
                       style="width: 100%"
                     />
@@ -371,7 +372,7 @@
           </div>
         </div>
       </main>
-      <div class="news">
+      <div class="news mgl">
         <p>
           Thuộc tính này floatban đầu được thiết kế để cho phép nội dung bao
           quanh hình ảnh. Một hình ảnh có thể được nổi và tất cả nội dung xung
@@ -424,6 +425,7 @@
           </div>
         </div>
       </footer>
+      <script src="js/tta.js"></script>
     </div>
   </body>
 </html>
