--- a/webthucung/app/templates/dang_ky_kham_benh.html
+++ b/webthucung/app/templates/dang_ky_kham_benh.html
@@ -55,26 +55,7 @@
     <body>
       <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-mdb-ride="carousel">
         <div class="carousel-indicators">
-          <button
-            type="button"
-            data-mdb-target="#carouselExampleCaptions"
-            data-mdb-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-mdb-target="#carouselExampleCaptions"
-            data-mdb-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-mdb-target="#carouselExampleCaptions"
-            data-mdb-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
+
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -94,62 +75,8 @@
                         "Ngôi Nhà Yêu Thương Cho Thú Cưng Của Bạn"</strong>
                     </p>
             </div>
-          </div>
-          <div class="carousel-item">
-            <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/8-col/img%283%29.jpg" class="d-block w-100" alt="Camera"/>
-            <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)"></div>
-            <div class="carousel-caption d-none d-md-block mb-5">
-              <h1 class="mb-4">
-                      <strong>Learn Bootstrap 5 with MDB</strong>
-                    </h1>
-      
-                    <p>
-                      <strong>Best & free guide of responsive web design</strong>
-                    </p>
-      
-                    <p class="mb-4 d-none d-md-block">
-                      <strong>The most comprehensive tutorial for the Bootstrap 5. Loved by over 3 000 000 users. Video and written versions
-                        available. Create your own, stunning website.</strong>
-                    </p>
-      
-                    <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-outline-white btn-lg">Start free tutorial
-                      <i class="fas fa-graduation-cap ms-2"></i>
-                    </a>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/8-col/img%285%29.jpg" class="d-block w-100" alt="Exotic Fruits"/>
-            <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)"></div>
-            <div class="carousel-caption d-none d-md-block mb-5">
-              <h1 class="mb-4">
-                      <strong>Learn Bootstrap 5 with MDB</strong>
-                    </h1>
-      
-                    <p>
-                      <strong>Best & free guide of responsive web design</strong>
-                    </p>
-      
-                    <p class="mb-4 d-none d-md-block">
-                      <strong>The most comprehensive tutorial for the Bootstrap 5. Loved by over 3 000 000 users. Video and written versions
-                        available. Create your own, stunning website.</strong>
-                    </p>
-      
-                    <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-outline-white btn-lg">Start free tutorial
-                      <i class="fas fa-graduation-cap ms-2"></i>
-                    </a>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-mdb-target="#carouselExampleCaptions" data-mdb-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-mdb-target="#carouselExampleCaptions" data-mdb-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-      
+          </div>     
+        </div>            
 <!--Main layout-->
 <main class="mt-1 pt-1">
   <div class="container">
@@ -186,18 +113,8 @@
                               <input type="text" id="typeText" placeholder="12345678"class="form-control" />
             
                           </div>
-                      </div>
-                      <!--Grid column-->
-                  </div>
-                  <!--Grid row-->
-
-                  <!-- Username
-  
-                  <div class="input-group mb-4">
-                      <span class="input-group-text" id="basic-addon1">@</span>                     
-                      <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" />
-                  </div>
-              -->
+                      </div>                     
+                  </div> 
                   <!--email-->
                   <p class="mb-0">
                       Email:
@@ -246,24 +163,7 @@
                     </p>
                     <div class="form-outline mb-4">
                         <input type="text" class="form-control" aria-label="Apartment or suite" aria-describedby="basic-addon1" />
-                    </div>               
-                 
-                  <!--Grid row-->                  
- <!--                 <div class="my-3">
-                      <div class="form-check">
-                          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked />
-                          <label class="form-check-label" for="flexRadioDefault1"> Credit card </label>
-                      </div>
-
-                      <div class="form-check">
-                          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" />
-                          <label class="form-check-label" for="flexRadioDefault2"> Debit card </label>
-                      </div>
-                      <div class="form-check">
-                          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" />
-                          <label class="form-check-label" for="flexRadioDefault3"> Paypal </label>
-                      </div>
-                  </div> --> 
+                    </div>                                
                   <!-- ngày hẹn-->
                   <p class="mb-0">
                     Ngày hẹn:
@@ -320,50 +220,31 @@
                 </div>  
                 <p class="mb-0">   
                       <div class="col-md-6 mb-3">
-                        <!--
-                          <p class="mb-0">
-                              Name on card
-                          </p>
-                          <div class="form-outline">
-                              <input type="text" class="form-control"/>
-                              <div class="form-helper">Full name as displayed on card</div>
-                          </div>
-                      </div>
-                      <div class="col-md-6 mb-3">
-                          <p class="mb-0">
-                              Credit card number
-                          </p>
-                          <div class="form-outline">
-                              <input type="text" class="form-control" />                                
-                          </div>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-3 mb-3">
-                          <p class="mb-0">
-                              Expiration
-                          </p>
-                          <div class="form-outline">
-                              <input type="text" class="form-control" />
-                              
-                          </div>
-                      </div>
-                      <div class="col-md-3 mb-3">
-                          <p class="mb-0">
-                              CVV
-                          </p>
-                          <div class="form-outline">
-                              <input type="text" class="form-control" />
-                              
-                          </div> -->
-                      </div>
-                    
-                  </div>
+                      </div>                    
                   <hr class="mb-4" />                    
-                <button class="btn btn-primary" type="button"style="background-color:rgb(4, 82, 47);" >Continue to checkout</button>
-              </div>
-            
-          </div>
+  <!-- Thông báo -->             
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="background-color:rgb(13, 120, 72);" >Đăng kí khám bệnh</button>
+   <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Đăng kí thành công!</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Đăng kí khám bệnh thành công!
+        Hotline: 0675048574 - Chuyên viên tư vấn
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+      </div>
+    </div>
+  </div>
+</div>           
+            </div>
+          </div>    
+        </div>
           <div class="col-md-4 mb-4">
               <!-- Heading -->
               <h4 class="d-flex justify-content-between align-items-center mb-3">
@@ -391,36 +272,20 @@
                     <div>
                         <h6 class="my-0"> Hotline: 0675048574 - Chuyên viên tư vấn </span>
                   </li>
-              </ul>
-              
-
-              <!-- 
-              <form class="card p-2">
-                  <div class="input-group mb-3">
- ô giỏ hàng
-  <input
-  type="text"
-  class="form-control"
-  placeholder="Promo code"
-  aria-label="Promo code"
-  aria-describedby="button-addon2"
-/>
-<button class="btn btn-primary" type="button" id="button-addon2" data-mdb-ripple-color="dark">
-  redeem
-</button>
-</div> -->
+             </ul>
               </form>
-              <!-- Promo code -->
+
           </div>
-          <!--Grid column-->
-      </div>
-      <!--Grid row-->
+
+
   </div>
 </main>
+
+
 <a class="btn btn-outline-success" type="submit" href="{% url 'home' %}">Quay lại Trang Trước</a>
 
 <!-- footer -->
-<footer class="text-center text-white mt-4" style="background-color:rgb(4, 82, 47);">
+<footer class="text-center text-white mt-4" style="background-color:rgb(4, 82, 47);"> 
 
   <hr class="text-dark" />
 
