--- a/project/CNPM/home/templates/home/home.html
+++ b/project/CNPM/home/templates/home/home.html
@@ -15,26 +15,23 @@
     <title>Pet Health Care</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>CHAM SOC THU CUNG</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
     <!--<link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/bootstrap.bundle.min.js"></script>-->
     {% load static %}
@@ -68,30 +65,41 @@
                   />
                 </a>
               </div>
-              <div class="col-md-10 text-center menu">
-                <ul>
-                  <li><a href="*">CẨM NANG CHĂM SÓC</a></li>
-                  <li>
-                    <a href="">DỊCH VỤ CHO PET </a>
-                    <ul>
-                      <li>
-                        <a href="*" class="text-center">Gửi Trông Giữ </a>
-                      </li>
-                      <li><a href="*"> Tiêm Phòng </a></li>
-                    </ul>
-                  </li>
-                  <li><a href="../Templates/login.html">ĐĂNG NHẬP</a></li>
-                  <li>
-                    <a href="*">
-                      <span class="glyphicon glyphicon-search"></span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="*">
-                      <span class="glyphicon glyphicon-shopping-cart"></span>
-                    </a>
-                  </li>
-                </ul>
+              <div class="col-md-10 navbar-expand-lg text-center">
+                <div class="menu">
+                  <ul>
+                    <li><a href="*">CẨM NANG CHĂM SÓC</a></li>
+                    <li class="nav-item dropdown">
+                      <a
+                        class="nav-link dropdown-toggle"
+                        href="#"
+                        role="button"
+                        data-bs-toggle="dropdown"
+                      >
+                        DỊCH VỤ CHO PET
+                      </a>
+                      <ul>
+                        <li>
+                          <a class="dropdown-item" href="*">Gửi Trông Giữ </a>
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="*"> Tiêm Phòng </a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li><a href="{% url 'login' %}">ĐĂNG NHẬP</a></li>
+                    <li>
+                      <a href="*">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="*">
+                        <span class="fas fa-shopping-cart"></span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
@@ -301,7 +309,7 @@
                       alt=""
                       class="w-100 rounded-3"
                     />
-                    <h5 class="fw-bold text2">TOP DỊCH VỤ</h5>
+                    <h5 class="fw-bold text2">TOP DỊCH VỤ TẠI TP.HCM</h5>
                     <p class="card-text">
                       Dịch vụ chăm sóc thú cưng uy tín tại Sài Gòn...
                     </p>
@@ -322,7 +330,7 @@
                       alt=""
                       class="w-100 rounded-3"
                     />
-                    <h5 class="fw-bold text2">SPA THÚ CƯNG</h5>
+                    <h5 class="fw-bold text2">DỊCH VỤ SPA THÚ CƯNG</h5>
                     <p class="card-text">
                       Dịch vụ Spa cho thú cưng tại PET GALAXY được...
                     </p>
