--- a/project/CNPM/home/templates/home/thucan.html
+++ b/project/CNPM/home/templates/home/thucan.html
@@ -21,11 +21,12 @@
     />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!--<link rel="stylesheet" href="css/bootstrap.min.css">
         <script src="js/bootstrap.bundle.min.js"></script>-->
@@ -87,7 +88,7 @@
                       <li><a href="../Templates/login.html">ĐĂNG NHẬP</a></li>
                       <li>
                         <a href="*">
-                          <i class="glyphicon glyphicon-search"> </i>
+                          <i class="fa-solid fa-magnifying-glass"></i>
                         </a>
                       </li>
                       <li>
@@ -155,7 +156,7 @@
                           >100,000 VND</span
                         >
                         <button class="add-to-cart">Thêm vào giỏ</button>
-                        <a href="#" class="btn btn-primary">See Profile</a>
+                        <a href="#" class="btn btn-success">See Profile</a>
                       </div>
                     </div>
                   </div>
