--- a/project/CNPM/home/static/home/css/thucan.css
+++ b/project/CNPM/home/static/home/css/thucan.css
@@ -1,6 +1,3 @@
-.body{
-  font-family: Verdana, sans-serif;;
-}
 .chung{
   font-size: 17px;
   font-family: verdana, sans-serif;
@@ -114,14 +111,15 @@
   }
 /**/ 
 .full{
+  font-family: verdana, sans-serif;
   float:left;
   width: 100%;
 }
 .content{
   padding-bottom: 30px;
   margin-bottom: 50px;
-  min-height: 900px;
-}
+  min-height: 900px; 
+} 
 .news{
   margin-top: 20px;
   min-height: 200px;
