--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -79,6 +79,12 @@
   <main class="container mt-4">
     <h1 class="text-center">Chào mừng đến với Web chăm sóc thú cưng</h1>
     <p class="text-center">Trang nhân viên (xin quý khách vui lòng chọn trang phù hợp):</p>
+    <div class="d-flex justify-content-center">
+      <img src="{% static 'app/images/base1.png'%}" width="200" height="300" alt="img">
+      <img src="{% static 'app/images/base2.jpg'%}" width="200" height="300" alt="img">
+      <img src="{% static 'app/images/base3.jpg'%}" width="200" height="300" alt="img">
+      <img src="{% static 'app/images/base4.jpg'%}" width="200" height="300" alt="img">
+    </div>
     <div class="row text-center mt-5">
         <div class="col-md-3">
             <a href="#" class="btn btn-primary btn-lg w-100">Quản lý Booking</a>
